# Simple-LLVM-project

./: CMakeLists.txt  README.md  main.cpp
